--- a/vue/vue-weather/public/index.html
+++ b/vue/vue-weather/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=73ee9b5f27af46613d6d6428d67e19e8"></script>
-    <script src="http://echarts.baidu.com/gallery/vendors/echarts/echarts.min.js"></script>
+    <!-- <script type="text/javascript" src="https://webapi.amap.com/maps?v=2.0&key=eb704e9da4b9e6b661fd270e6af16879&plugin=AMap.CitySearch"></script>  -->
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=73ee9b5f27af46613d6d6428d67e19e8"></script> 
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
